libstsc++: Initial enabling of separate shared libsupc++
This has no configuration control yet - and D and M2 will need
changes to their drivers to add -lsupc++.

At the moment, we do not seem to be able to get a clean testsuite
with a forwarded lib but without also adding it to the link lines
for dependents (we sometimes end up with symbols resolved from
c++abi).

--- a/Makefile.in
+++ b/Makefile.in
@@ -284,7 +284,9 @@ POSTSTAGE1_HOST_EXPORTS = \
 	  -I$$r/prev-$(TARGET_SUBDIR)/libphobos/libdruntime -I$$s/libphobos/libdruntime \
 	  -L$$r/prev-$(TARGET_SUBDIR)/libphobos/src/.libs \
 	  -B$$r/prev-$(TARGET_SUBDIR)/libstdc++-v3/src/.libs \
-	  -L$$r/prev-$(TARGET_SUBDIR)/libstdc++-v3/src/.libs"; \
+	  -L$$r/prev-$(TARGET_SUBDIR)/libstdc++-v3/src/.libs \
+	  -B$$r/prev-$(TARGET_SUBDIR)/libstdc++-v3/libsupc++/.libs \
+	  -L$$r/prev-$(TARGET_SUBDIR)/libstdc++-v3/libsupc++/.libs"; \
 	export GDC; \
 	GDC_FOR_BUILD="$$GDC"; export GDC_FOR_BUILD; \
 	GNATBIND="$$r/$(HOST_SUBDIR)/prev-gcc/gnatbind"; export GNATBIND; \
