--- a/libstdc++-v3/doc/Makefile.in
+++ b/libstdc++-v3/doc/Makefile.in
@@ -256,7 +256,9 @@ SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
+SYMVER_ABI_FILE = @SYMVER_ABI_FILE@
 SYMVER_FILE = @SYMVER_FILE@
+SYMVER_LIB_FILE = @SYMVER_LIB_FILE@
 TOPLEVEL_INCLUDES = @TOPLEVEL_INCLUDES@
 USE_NLS = @USE_NLS@
 VERSION = @VERSION@
@@ -341,6 +343,7 @@ oldincludedir = @oldincludedir@
 
 # PDF
 pdfdir = "$(DESTDIR)@docdir@"
+port_specific_abi_symbol_files = @port_specific_abi_symbol_files@
 port_specific_symbol_files = @port_specific_symbol_files@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
