--- a/libstdc++-v3/src/Makefile.in
+++ b/libstdc++-v3/src/Makefile.in
@@ -90,8 +90,10 @@ build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
 @ENABLE_SYMVERS_DARWIN_TRUE@am__append_1 = -Wl,-rpath,@loader_path/../lib \
-@ENABLE_SYMVERS_DARWIN_TRUE@	-Wl,-reexport_library,$(top_builddir)/libsupc++/.libs/libsupc++.dylib
+@ENABLE_SYMVERS_DARWIN_TRUE@	-Wl,-lc++abi
 
+#	-Wl,-reexport_library,/usr/lib/libc++abi.dylib
+#	-Wl,-reexport_library,$(top_builddir)/libsupc++/.libs/libsupc++.dylib
 @ENABLE_SYMVERS_DARWIN_FALSE@am__append_2 = -lm
 subdir = src
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -558,15 +560,17 @@ cxx11_sources = \
 #	$(top_builddir)/libsupc++/libsupc++.la 
 libstdc___la_LIBADD = \
 	$(GLIBCXX_LIBS) \
+	$(top_builddir)/cxxabi/libc++abiconvenience.la \
 	$(top_builddir)/src/c++98/libc++98convenience.la \
 	$(top_builddir)/src/c++11/libc++11convenience.la \
 	$(top_builddir)/src/c++17/libc++17convenience.la \
 	$(top_builddir)/src/c++20/libc++20convenience.la
 
+
+#	$(top_builddir)/libsupc++/libsupc++.la 
 libstdc___la_DEPENDENCIES = \
 	${version_dep} \
-	$(top_builddir)/libsupc++/libsupc++convenience.la \
-	$(top_builddir)/libsupc++/libsupc++.la \
+	$(top_builddir)/cxxabi/libc++abiconvenience.la \
 	$(top_builddir)/src/c++98/libc++98convenience.la \
 	$(top_builddir)/src/c++11/libc++11convenience.la \
 	$(top_builddir)/src/c++17/libc++17convenience.la \
