--- a/gcc/d/Make-lang.in
+++ b/gcc/d/Make-lang.in
@@ -67,7 +67,7 @@ ALL_DFLAGS = $(DFLAGS-$@) $(GDCFLAGS) -fversion=IN_GCC $(CHECKING_DFLAGS) \
 DCOMPILE.base = $(GDC) -c $(ALL_DFLAGS) -o $@
 DCOMPILE = $(DCOMPILE.base) -MT $@ -MMD -MP -MF $(@D)/$(DEPDIR)/$(*F).TPo
 DPOSTCOMPILE = @mv $(@D)/$(DEPDIR)/$(*F).TPo $(@D)/$(DEPDIR)/$(*F).Po
-DLINKER = $(GDC) $(NO_PIE_FLAG) -lstdc++ -lsupc++
+DLINKER = $(GDC) $(NO_PIE_FLAG) -lstdc++ -lc++abi
 
 # Like LINKER, but use a mutex for serializing front end links.
 ifeq ($(DO_LINK_MUTEX),true)
